--- a/Resources/assets/css/admin.css
+++ b/Resources/assets/css/admin.css
@@ -4636,6 +4636,82 @@ small.error {
   color: #505050;
 }
 
+/* Breadcrumbs */
+/* line 116, ../../../../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_breadcrumbs.scss */
+.breadcrumbs {
+  display: block;
+  padding: 0.69231em 1.07692em 0.69231em;
+  overflow: hidden;
+  margin-left: 0;
+  list-style: none;
+  border-style: solid;
+  border-width: 1px;
+  background-color: #f6f6f6;
+  border-color: gainsboro;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+}
+/* line 120, ../../../../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_breadcrumbs.scss */
+.breadcrumbs > * {
+  margin: 0;
+  float: left;
+  font-size: 0.84615em;
+  text-transform: uppercase;
+  color: #4787ed;
+}
+/* line 61, ../../../../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_breadcrumbs.scss */
+.breadcrumbs > *:hover a, .breadcrumbs > *:focus a {
+  text-decoration: underline;
+}
+/* line 64, ../../../../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_breadcrumbs.scss */
+.breadcrumbs > * a,
+.breadcrumbs > * span {
+  text-transform: uppercase;
+  color: #4787ed;
+}
+/* line 70, ../../../../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_breadcrumbs.scss */
+.breadcrumbs > *.current {
+  cursor: default;
+  color: #333333;
+}
+/* line 73, ../../../../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_breadcrumbs.scss */
+.breadcrumbs > *.current a {
+  cursor: default;
+  color: #333333;
+}
+/* line 79, ../../../../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_breadcrumbs.scss */
+.breadcrumbs > *.current:hover, .breadcrumbs > *.current:hover a, .breadcrumbs > *.current:focus, .breadcrumbs > *.current:focus a {
+  text-decoration: none;
+}
+/* line 83, ../../../../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_breadcrumbs.scss */
+.breadcrumbs > *.unavailable {
+  color: #999999;
+}
+/* line 85, ../../../../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_breadcrumbs.scss */
+.breadcrumbs > *.unavailable a {
+  color: #999999;
+}
+/* line 90, ../../../../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_breadcrumbs.scss */
+.breadcrumbs > *.unavailable:hover, .breadcrumbs > *.unavailable:hover a, .breadcrumbs > *.unavailable:focus,
+.breadcrumbs > *.unavailable a:focus {
+  text-decoration: none;
+  color: #999999;
+  cursor: default;
+}
+/* line 97, ../../../../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_breadcrumbs.scss */
+.breadcrumbs > *:before {
+  content: "/";
+  color: #aaaaaa;
+  margin: 0 0.92308em;
+  position: relative;
+  top: 1px;
+}
+/* line 105, ../../../../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_breadcrumbs.scss */
+.breadcrumbs > *:first-child:before {
+  content: " ";
+  margin: 0;
+}
+
 /* Labels */
 /* line 71, ../../../../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_labels.scss */
 .label {
@@ -4697,6 +4773,64 @@ small.error {
 /* line 41, ../../../../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_inline-lists.scss */
 .inline-list > li > * {
   display: block;
+}
+
+/* Pagination */
+/* line 98, ../../../../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_pagination.scss */
+.pagination {
+  display: block;
+  height: 1.84615em;
+  margin-left: -0.38462em;
+}
+/* line 46, ../../../../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_pagination.scss */
+.pagination li {
+  display: block;
+  float: left;
+  height: 1.84615em;
+  color: #222222;
+  font-size: 1.07692em;
+  margin-left: 0.38462em;
+}
+/* line 54, ../../../../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_pagination.scss */
+.pagination li a {
+  display: block;
+  padding: 0.07692em 0.53846em 0.07692em;
+  color: #999999;
+}
+/* line 61, ../../../../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_pagination.scss */
+.pagination li:hover a,
+.pagination li a:focus {
+  background: #e6e6e6;
+}
+/* line 63, ../../../../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_pagination.scss */
+.pagination li.unavailable a {
+  cursor: default;
+  color: #999999;
+}
+/* line 68, ../../../../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_pagination.scss */
+.pagination li.unavailable:hover a, .pagination li.unavailable a:focus {
+  background: transparent;
+}
+/* line 70, ../../../../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_pagination.scss */
+.pagination li.current a {
+  background: #4787ed;
+  color: white;
+  font-weight: bold;
+  cursor: default;
+}
+/* line 77, ../../../../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_pagination.scss */
+.pagination li.current a:hover, .pagination li.current a:focus {
+  background: #4787ed;
+}
+
+/* line 83, ../../../../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_pagination.scss */
+.pagination-centered {
+  text-align: center;
+}
+/* line 84, ../../../../../../../../Library/Ruby/Gems/1.8/gems/zurb-foundation-4.2.1/scss/foundation/components/_pagination.scss */
+.pagination-centered ul > li {
+  float: none;
+  display: inline-block;
 }
 
 /* Panels */
