--- a/Resources/assets/scss/_admin-foundation.scss
+++ b/Resources/assets/scss/_admin-foundation.scss
@@ -18,11 +18,11 @@
   //"foundation/components/joyride",
   //"foundation/components/clearing",
   "foundation/components/alert-boxes",
-  //"foundation/components/breadcrumbs",
+  "foundation/components/breadcrumbs",
   //"foundation/components/keystrokes",
   "foundation/components/labels",
   "foundation/components/inline-lists",
-  //"foundation/components/pagination",
+  "foundation/components/pagination",
   "foundation/components/panels",
   //"foundation/components/pricing-tables",
   //"foundation/components/progress-bars",
