Show sidebar only on edit

--- a/Resources/views/Admin/templates/edit.html.twig
+++ b/Resources/views/Admin/templates/edit.html.twig
@@ -47,9 +47,11 @@
             </p>
         </form>
     </div>
-    <div class="large-4 columns">
-        <hr class="show-for-small" />
-        {% block sidebar %}{% endblock %}
-    </div>
+    {% if entity.id %}
+        <div class="large-4 columns">
+            <hr class="show-for-small" />
+            {% block sidebar %}{% endblock %}
+        </div>
+    {% endif %}
 </div>
 {% endblock %}
