labels trans domain chagned to "admin.*"

--- a/Resources/views/Form/fields.html.twig
+++ b/Resources/views/Form/fields.html.twig
@@ -2,7 +2,6 @@
 
 {% block form_label %}
 {% spaceless %}
-    {% set translation_domain = 'illarra_admin' %}
     {% if label is not sameas(false) %}
         {% if not compound %}
             {% set label_attr = label_attr|merge({'for': id}) %}
@@ -11,9 +10,9 @@
             {% set label_attr = label_attr|merge({'class': (label_attr.class|default('') ~ ' required')|trim}) %}
         {% endif %}
         {% if label is empty %}
-            {% set label = 'label.'~ name %}
+            {% set label = 'admin.label.'~ name %}
         {% endif %}
-        <label{% for attrname, attrvalue in label_attr %} {{ attrname }}="{{ attrvalue }}"{% endfor %}>{{ label|trans({}, translation_domain) }}
+        <label{% for attrname, attrvalue in label_attr %} {{ attrname }}="{{ attrvalue }}"{% endfor %}>{{ label|trans }}
             {%- if required %} <b class="color-alert">*</b>{%- endif -%}
         </label>
     {% endif %}
