--- a/Resources/views/Admin/login.html.twig
+++ b/Resources/views/Admin/login.html.twig
@@ -1,7 +1,5 @@
 {% extends "IllarraCoreBundle::base.html.twig" %}
 
-{% trans_default_domain "illarra_admin" %}
-
 {% block stylesheets %}
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,700' rel='stylesheet' type='text/css'>
     {% stylesheets
@@ -29,25 +27,27 @@
     {% endjavascripts %}
 {% endblock %}
 
-{% block title %}{{ app.request.host }} - {{ 'title.admin'|trans }}{% endblock %}
+{% block title %}{{ app.request.host }} - {{ 'admin.login.title'|trans }}{% endblock %}
 
 {% block body %}
 <div class="body row">
     <div class="large-12 columns">
         <form action="{{ path('illarra_admin_security_check') }}" method="post" id="login">
             <span class="logo"></span>
-            <h5 class="subheader">{{ 'subheader.login'|trans }}</h5>
+            <h5 class="subheader">{{ 'admin.login.subheader'|trans }}</h5>
             {% if error %}
                 <div data-alert class="alert-box alert">{{ error.message|trans }} <a href="#" class="close">&times;</a></div>
             {% endif %}
-            <input type="text" id="username" name="_username" value="{{ last_username }}" placeholder="{{ 'label.username'|trans }}" />
-            <input type="password" id="password" name="_password" placeholder="{{ 'label.password'|trans }}" />
+            <input type="text" id="username" name="_username" value="{{ last_username }}" placeholder="{{ 'admin.label.username'|trans }}" />
+            <input type="password" id="password" name="_password" placeholder="{{ 'admin.label.password'|trans }}" />
             <hr />
-            <button class="radius button" type="submit">{{ 'action.login'|trans }}</button>
+            <button class="radius button" type="submit">{{ 'admin.action.login'|trans }}</button>
         </form>
         <p class="footer text-center">
-            <small>© 2013, <strong>illarra</strong>. Zarautz, Barcelona, Gent.
-            <br />{{ 'label.telephone'|trans }}: +32 476 06 63 87</small>
+            <small class="subheader-color">
+                &copy; {{ "now"|date("Y") }}, <strong>illarra</strong>. Zarautz, Barcelona, Gent.
+                <br />{{ 'admin.footer.telephone'|trans }}: +32 476 06 63 87
+            </small>
         </p>
     </div>
 </div>
