--- a/Resources/views/Admin/index.html.twig
+++ b/Resources/views/Admin/index.html.twig
@@ -1,11 +1,9 @@
 {% extends "IllarraCoreBundle:Admin:layout.html.twig" %}
 
-{% trans_default_domain "illarra_admin" %}
-
 {% block content %}
 <div class="row">
     <div class="large-12 columns">
-        <h3>{{ 'title.dashboard'|trans }}</h3>
+        <h3>{{ 'admin.title.dashboard'|trans }}</h3>
     </div>
 </div>
 {% endblock %}
