--- a/Resources/views/Admin/logs.html.twig
+++ b/Resources/views/Admin/logs.html.twig
@@ -1,16 +1,14 @@
 {% extends "IllarraCoreBundle:Admin:layout.html.twig" %}
 
-{% trans_default_domain "illarra_admin" %}
-
 {% block content %}
 <div class="row">
     <div class="large-12 columns">
-        <h3>{{ 'title.logs'|trans }}</h3>
+        <h3>{{ 'admin.logs.title'|trans }}</h3>
     </div>
 </div>
 <div class="row">
     <div class="large-6 columns">
-        <h5 class="subheader">{{ 'subheader.logs'|trans }}</h5>
+        <h5 class="subheader">{{ 'admin.logs.subheader'|trans }}</h5>
     </div>
 </div>
 {% endblock %}
