--- a/Resources/views/Admin/index.html.twig
+++ b/Resources/views/Admin/index.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="row">
     <div class="large-12 columns">
-        <h3>{{ 'admin.title.dashboard'|trans }}</h3>
+        <h3>{{ 'admin.dashboard.title'|trans }}</h3>
     </div>
 </div>
 {% endblock %}
