--- a/Resources/views/Admin/layout.html.twig
+++ b/Resources/views/Admin/layout.html.twig
@@ -121,7 +121,7 @@
         <hr />
         <small class="subheader-color">
             &copy; {{ "now"|date("Y") }}, <strong>illarra</strong>. Zarautz, Barcelona, Gent.
-            <br />{{ 'admin.footer.telephone'|trans }}: +32 476 06 63 87
+            <br />{{ 'admin.label.telephone'|trans }}: +32 476 06 63 87
         </small>
     </div>
 </div>
