--- a/Resources/views/Admin/login.html.twig
+++ b/Resources/views/Admin/login.html.twig
@@ -46,7 +46,7 @@
         <p class="footer text-center">
             <small class="subheader-color">
                 &copy; {{ "now"|date("Y") }}, <strong>illarra</strong>. Zarautz, Barcelona, Gent.
-                <br />{{ 'admin.footer.telephone'|trans }}: +32 476 06 63 87
+                <br />{{ 'admin.label.telephone'|trans }}: +32 476 06 63 87
             </small>
         </p>
     </div>
