new tarnslations + fix

--- a/Resources/views/Form/fields.html.twig
+++ b/Resources/views/Form/fields.html.twig
@@ -164,7 +164,7 @@
             </div>
             <h5 class="title">
                 <a href="#">
-                    <i class="icon-section-indicator"></i> {{ 'admin.label.gallery'|trans }}
+                    <i class="icon-section-indicator"></i> {{ 'admin.gallery.title'|trans }}
                 </a>
             </h5>
             <div class="content">
