Point & Gallery cleanup

--- a/Resources/views/Form/fields.html.twig
+++ b/Resources/views/Form/fields.html.twig
@@ -164,7 +164,7 @@
             </div>
             <h5 class="title">
                 <a href="#">
-                    <i class="icon-section-indicator"></i> {{ 'admin.gallery.title'|trans }}
+                    <i class="icon-section-indicator"></i> {{ 'admin.label.gallery'|trans }}
                 </a>
             </h5>
             <div class="content">
@@ -191,7 +191,7 @@
                 <ul class="inline-list">
                     <li>
                         <a href="#" data-images-add-new>
-                            <i class="icon-plus-sign"></i> {{ 'admin.gallery.action.add'|trans }}
+                            <i class="icon-plus-sign"></i> {{ 'admin.action.galleryAdd'|trans }}
                         </a>
                     </li>
                 </ul>
@@ -218,7 +218,7 @@
                     </div>
                     <div class="small-3 columns">
                         <button id="{{ id }}_search" class="secondary postfix button" data-map-search>
-                            {{ 'admin.point.action.search'|trans }}
+                            {{ 'admin.action.search'|trans }}
                         </button>
                     </div>
                 </div>
